Fixed horizontal scrollbar

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,7 +27,7 @@ body {
 }
 
 
-html,#canvas1 {
+html{
   scroll-behavior: smooth;
   max-width: 100%;
   
